--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -12,7 +12,10 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  /* text-align: center; */
 }
 .about p {
   color: #fff;
@@ -20,11 +23,44 @@
 .about h1 {
   color: #fff;
 }
+.links {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  /* width: 50em; */
+  /* margin-left: 1em; */
+}
+.link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #fff;
+}
+.icon {
+  margin-right: 8px;
+  font-size: 25px;
+}
 
 @media (max-width: 391px) {
+  .about {
+    border: none;
+    width: 100%;
+    font-size: 13px;
+  }
+  .icon {
+    font-size: 60px;
+  }
 }
 @media (min-width: 391px) and (max-width: 768px) {
   /* Estilos para pantallas con ancho máximo de 768px */
+  .icon {
+    font-size: 70px;
+  }
+  .about {
+    border: none;
+    width: 100%;
+    font-size: 15px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
