--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,15 +1,8 @@
-.container {
-}
-
 .conteinerCard {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100vh;
-  gap: 0.6em;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 5px;
+  padding: 0px 5px;
 }
 
 .divImage {
