--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,5 +1,5 @@
 .nav {
-  height: 5em;
+  height: 6em;
   background-color: #041630c5;
   top: 1em;
   margin-bottom: 2em;
@@ -66,6 +66,18 @@
   height: 0.6px;
   background-color: #fd9502;
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
+}
+.saved {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 5px;
+}
+.span {
+  position: absolute;
+  top: -12px;
+  left: 1px;
+  font-size: 13px;
 }
 
 @media (max-width: 391px) {
