--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -2,16 +2,22 @@
   width: 100%;
   height: auto;
   position: relative;
+  transition: all 1s ease;
 }
+
 .img {
   width: 100%;
   max-width: 100%;
   height: 24em;
   object-fit: cover;
   cursor: zoom-in;
+  transition: opacity 0.7s ease;
+}
+.img:hover {
+  opacity: 0.8;
 }
 
-.button {
+.buttonSaved {
   position: absolute;
   top: 1px;
   left: 1px;
@@ -21,8 +27,19 @@
   color: #042335;
   transition: all 0.5s;
 }
-.button:hover {
-  color: #042335d7;
+
+.divButtonsRed {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+.buttonRed {
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  color: #ddd;
+  transition: all 1s ease;
 }
 
 .zoomed:hover {
@@ -45,6 +62,10 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
   z-index: 9998;
+}
+
+.hidden {
+  display: none;
 }
 
 @media (max-width: 391px) {
