--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -7,9 +7,10 @@
 
 .divImage {
   width: 100%;
-  height: 32em;
+  height: 25em;
   background-image: url("../../helper/Screenshot_1.png");
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   margin-bottom: 0.8em;
   display: flex;
